# f1_data

./: .gitignore  README.md  data_loader.py  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  test.ipynb
data/: data_readme.md  database.py  models.py
utils/: api_client.py
