[project]
name = "f1-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "pymongo>=4.12.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
